--- a/kid-sleeper/src/app/app.component.scss
+++ b/kid-sleeper/src/app/app.component.scss
@@ -1,24 +1,29 @@
-button{
-    padding: .75rem;
-    margin-right: 1rem;
-}
-
 .enclosing {
     height: 100vh;
     width : 100vw;
 }
 .totaltimepick{
-    margin-right: 1rem;
+    display: inline-block;
+    margin: 0rem 1rem;
+    font-size: 2rem;
+    line-height: 2rem;
+    vertical-align: middle;
+}
+button{
+    margin: 0rem .5rem;
+    height: 5vh;
+}
+.time-remaining{
+    display: inline-block;
     font-size: 2rem;
     line-height: 2rem;
     vertical-align: middle;
 }
 
 .selected-background-image {
-    height     : 90vh;
-    margin-left: 5vw;
+    height     : calc(95vh - (95vh - 95%));
     margin-top : 5vh;
-    width      : 90vw;
+    width      : 100vw;
     position   : absolute;
     z-index    : 111;
     top        : 0;
@@ -32,6 +37,7 @@ button{
     left    : 0;
     text-align: center;
     width: 100vw;
+    height: 5vh;
 }
 
 .side-controls{
@@ -50,10 +56,9 @@ button{
 .progress {
     position   : fixed;
     z-index    : 9999999;
-    width      : 80vw;
-    margin-left: 5vw;
+    width      : 100vw;
     margin-top : 5vh;
-    width      : 90vw;
+    height     : calc(95vh - (95vh - 95%));
 
     &.green {
         background-color: green;
